@@ -256,4 +256,9 @@ public class POCross extends PhysicalOperator {
         data = null;
     }
 
+    @Override
+    public void reset() {
+        clearMemory();
+    }
+
 }
